unpackaged/main/default/objects/litify_pm__COI_Setting__c/litify_pm__COI_Setting__c.object-meta.xml
<CustomObject>
    <label>COI Setting</label>
    <nameField>
        <label>COI Setting Name</label>
        <type>Text</type>
    </nameField>
    <pluralLabel>COI Settings</pluralLabel>
    <sharingModel>ReadWrite</sharingModel>
</CustomObject>