unpackaged/main/default/objects/litify_pm__COI_Setting__c/fields/litify_pm__Conflict_Statuses_Enabled__c.field-meta.xml
<CustomField>
    <fullName>litify_pm__Conflict_Statuses_Enabled__c</fullName>
    <defaultValue>true</defaultValue>
    <label>Conflict Statuses Enabled</label>
    <type>Checkbox</type>
</CustomField>