unpackaged/main/default/objects/litify_pm__COI_Setting__c/fields/litify_pm__Hide_Score__c.field-meta.xml
<CustomField>
    <fullName>litify_pm__Hide_Score__c</fullName>
    <defaultValue>false</defaultValue>
    <label>Hide Score</label>
    <type>Checkbox</type>
</CustomField>